--- a/public/stylesheets/questions.css
+++ b/public/stylesheets/questions.css
@@ -5,3 +5,79 @@
 .editable:nth-child(even){
     background-color: hsl(0deg 0% 100%);
 }
+
+/* question section */
+
+.question-container{
+    min-height: 500px;
+    max-width: 80%;
+    margin: 75px auto;
+}
+
+.question-top-section-title{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 3em;
+    color: rgb(10,149,255);
+}
+
+
+.question-user-info{
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom: 1px solid rgba(244, 130, 37, 1);
+    padding-bottom: 20px;
+    padding-right: 40px;
+    padding-left: 40px;
+
+}
+
+.question-user-info-item p{
+    display: inline-block;
+}
+
+.question-user-info-item i{
+    margin-right: 10px;
+}
+
+.edit-btn, .delete-btn, .cancel-btn, .confirm-btn{
+    color: rgb(249,252,255);
+    border: 1px solid rgb(122,167,199);
+    background-color: rgb(10,149,255);
+    text-decoration: none;
+    padding: 0.8em;
+    font-size: 13px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 3px;
+    width: fit-content;
+}
+
+.delete-btn{
+    background-color: rgb(255, 0, 0);
+    margin-left: 15px;
+}
+
+.question-actions{
+    float: right;
+    margin-top: 50px;
+}
+
+.question-content{
+    margin-top: 100px;
+    min-height: 300px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 0 20px 48px rgb(0 0 0 / 5%), 0 1px 4px rgb(0 0 0 / 10%);
+}
+
+
+#profile-grad-icon{
+    color:rgba(244, 130, 37, 1)
+}
+
+.question-user-profile-link:hover{
+    color:rgba(244, 130, 37, 1);
+}
