--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -1,6 +1,8 @@
 extends layout.pug
 
 append head
+    link(rel="stylesheet", href="/stylesheets/user-profile.css")
+
     script(src="/javascripts/user-profile.js" type='module' defer) 
 
 
