--- a/public/stylesheets/questions-form-container.css
+++ b/public/stylesheets/questions-form-container.css
@@ -26,27 +26,114 @@
     flex-direction: column;
     box-shadow: 1px 1px 10px rgba(151, 151, 151, 0.6);
     border-radius: 5px;
-    width: 500px;
+    width: 50em;
     padding: 10px;
 }
 .q-title {
     margin: 10px 0 5px 0;
+    font-weight: bold;
+}
+
+.q-title + p {
+    font-size: 12px;
+    margin: 0 0 5px 0;
+}
+
+.title-input {
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    border: rgba(151, 151, 151, 0.6) solid 1px;
 }
 
 .question-header {
     font-size: 36px;
 }
 
+.q-details {
+    margin: 10px 0 5px 0;
+    font-weight: bold;
+}
+
+.q-details + p {
+    font-size: 12px;
+    margin: 0 0 5px 0;
+}
+
 .questionTextArea{
-    height:100px;
+    height: 300px;
     width: 100%;
+    border-radius: 5px;
+    border: rgba(151, 151, 151, 0.6) solid 1px;
 }
 
 #postQuestion{
-    width: 75px;
-
+    background-color: #0a95ff;
+    border-radius: 2px;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin: 15px 0 5px 0;
+    width: 150px;
+    cursor: pointer;
 }
 
- .title-input {
-     width: 600px;
- }
+.helpful-cards {
+    box-shadow: 1px 1px 10px rgba(151, 151, 151, 0.6);
+    border-radius: 5px;
+    width: 20em;
+    padding: 20px;
+    margin-left: 25px;
+    height: max-content;
+}
+
+.card-header {
+    padding: 10px;
+    background-color: rgba(214, 214, 214, 0.4);
+}
+
+.card-info {
+    padding: 10px;
+}
+
+.card-info > p {
+    margin-bottom: 10px;
+}
+
+.collapsible {
+    background-color: rgba(214, 214, 214, 0.4);
+    width: 20em;
+    height: 30px;
+    border: rgba(151, 151, 151, 0.6) solid 1px;
+    margin: 4px;
+    padding: 5px;
+    text-align: left;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 3px;
+}
+
+ol li {
+    font-weight: bold;
+    color: #0a95ff;
+}
+
+.summarize-problem-lists > li{
+    font-size: 15px;
+    margin: 5px 0 5px 20px;
+    font-weight: normal;
+    color: rgb(51, 51, 51);
+}
+
+.collapsible + p {
+    font-size: 15px;
+    margin: 5px 0 5px 20px;
+    font-weight: normal;
+    color: rgb(51, 51, 51);
+}
+
+.error-styles {
+    
+}
