--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -71,21 +71,31 @@ h2 {
 }
 
 .question-content{
-    display: flex;
     position: relative;
     margin: 0 auto;
     height: fit-content;
     padding: 15px 15px 15px 15px;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
     hyphens: auto;
-    white-space: normal;
     font-size: 18px;
     margin-bottom: 12px;
+
+
+    display:inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 110ch;
+
+
 }
 
 .editable{
     outline: 3px solid black;
+    display: flex;
+    white-space: normal;
+    overflow-y:scroll;
+    overflow-x: scroll;
+    word-wrap:break-word;
 }
 
 .edit-btn, .delete-btn, .cancel-btn, .confirm-btn, .view-question-page{
@@ -157,4 +167,10 @@ h2 {
 .search-answers-content p{
     display: inline-block;
     margin-left: 10px;
+}
+.content-container{
+    display: flex;
+    justify-content: center;
+    max-width: 1000px;
+    margin: 0 auto;
 }
