added demo user

--- a/public/stylesheets/login-style.css
+++ b/public/stylesheets/login-style.css
@@ -85,3 +85,10 @@
     width: 75px;
     height: 75px;
 }
+
+.login-demo-user{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 100px;
+}
