--- a/public/stylesheets/user-signup.css
+++ b/public/stylesheets/user-signup.css
@@ -12,7 +12,7 @@ body{
 
 /* Form styles */
 .signup-form-container{
-    height: 500px;
+    height: 625px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 0 20px 48px rgb(0 0 0 / 5%), 0 1px 4px rgb(0 0 0 / 10%);
     display:flex;
@@ -62,6 +62,10 @@ body{
 
 .signup-button{
     margin-bottom: 30px;
+}
+
+.demo-user-form{
+    margin-top: 50px;
 }
 
 /* Content Section */
