--- a/views/users-login.pug
+++ b/views/users-login.pug
@@ -19,3 +19,9 @@ block content
      div.signup-link
          p Don't have an account?
             a(href='/users/signup')  Sign up
+
+    form(action="/users/login/demo", method="post" class="demo-user-form login-demo-user") 
+                    input(type="hidden", name="_csrf" value=csrfToken) 
+                    input(type="hidden", name="emailAddress" value="bob@gmail.com") 
+                    input(type="hidden", name="password" value='Password1!') 
+                    input(type="submit", value="Demo User" class="login-button signup-button")
