--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -28,12 +28,15 @@ block content
                     .profile-subsection-header-box
                         i(class="fas fa-question" id="profile-header-question-icon")
                         h2.profile-subsection-header Asked Questions
-                    ul.profile-subsection-list
-                        each question in userFound.Questions
-                            li.profile-subsection-list-item.profile-table-item
-                                p.profile-subsection-list-answers Answers: #{question.Answers.length}
-                                p.profile-subsection-list-title: a(href=`/questions/${question.id}` class='profile-table-link') #{question.title}
-                                p.profile-subsection-list-date #{question.createdAt.toDateString()}
+                    if userFound.Questions.length
+                        ul.profile-subsection-list
+                            each question in userFound.Questions
+                                li.profile-subsection-list-item.profile-table-item
+                                    p.profile-subsection-list-answers Answers: #{question.Answers.length}
+                                    p.profile-subsection-list-title: a(href=`/questions/${question.id}` class='profile-table-link') #{question.title}
+                                    p.profile-subsection-list-date #{question.createdAt.toDateString()}
+                    else
+                        p.profile-no-question Seems like you have everything figured out :)
                 .profile-add-questions-box 
                     h3.profile-subsection-header Ready to add a new Question?
                     a(href="/questions"): button.login-button#profile-ask-question-btn I need help :(
@@ -63,4 +66,4 @@ block content
                                 i(class="fas fa-graduation-cap" id="profile-header-grad-icon")
                                 h2.profile-subsection-header Answered Questions
                             p.profile-no-answer Uh oh, it seems you have not helped anyone yet!
-                            a(href="/questions"): button.login-button#profile-ask-question-btn View Questions
+                            a(href="/"): button.login-button#profile-ask-question-btn View Questions
