--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,13 @@ block content
     div(id='questionList-innerContainer')
       each question in listOfQuestions
             div(id=`question-container-${question.id}`).questionContainer
-                a(href=`/questions/${question.id}`).question-title= question.title
+                a(href=`/questions/${question.id}`).question-title.question-title-hover= question.title
+                .question-user-content
+                  .question-user-box
+                    p.question-posted-by Posted by: #{question.User.dataValues.username}
+                    .question-answers 
+                      i(class="fas fa-graduation-cap" id="profile-grad-icon")
+                      p.question-answers-content #{question.Answers.length}
                 div.content-container
                   span(id=`content-${question.id}`).question-content= question.content
                 if locals.user
