--- a/public/stylesheets/questions.css
+++ b/public/stylesheets/questions.css
@@ -1,5 +1,10 @@
 .editable{
-    outline: 3px solid black;
+    outline: 1px solid black;
+    border-radius: 3px;
+    width: 300px;
+    height: 70px;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 .editable:nth-child(even){
@@ -41,7 +46,7 @@
     margin-right: 10px;
 }
 
-.edit-btn, .delete-btn, .cancel-btn, .confirm-btn, .edit-btn-answer, .delete-btn-answer{
+.edit-btn, .confirm-btn-comment, .cancel-btn-answer, .confirm-btn-answer, .cancel-btn-comment, .delete-btn, .cancel-btn, .confirm-btn, .edit-btn-answer, .delete-btn-answer{
     color: rgb(249,252,255);
     border: 1px solid rgb(122,167,199);
     background-color: rgb(10,149,255);
@@ -54,6 +59,10 @@
     width: fit-content;
     height: fit-content;
     margin: 5px;
+}
+
+.cancel-btn-comment, .cancel-btn-answer {
+    background-color: rgb(255, 128, 44);
 }
 
 .delete-btn, .delete-btn-answer{
@@ -73,6 +82,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     padding: 20px;
+    overflow-wrap: break-word;
     box-shadow: 0 10px 25px rgb(0 0 0 / 5%), 0 20px 48px rgb(0 0 0 / 5%), 0 1px 4px rgb(0 0 0 / 10%);
 }
 
@@ -121,7 +131,7 @@
 /* answer list section */
 
 .answerContainer{
-    width: 80%;
+    width: 600px;
     margin: 0 auto 50px;
 }
 
@@ -154,13 +164,55 @@
     grid-row-end: 1;
     min-width: 700px;
     margin-bottom: 10px;
+    margin-top: 10px;
+    overflow-wrap: break-word;
+}
+
+.posting-comment-andcomments-container {
+    width: 700px;
+    grid-column-start: 2;
+    grid-column-start: 3;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+
+.new-comment-post-box {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+}
+
+.create-comment-content + button {
+    color: rgb(249,252,255);
+    border: 1px solid rgb(122,167,199);
+    background-color: rgb(10,149,255);
+    text-decoration: none;
+    padding: 0.4em;
+    font-size: 13px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 3px;
+    width: fit-content;
+    height: fit-content;
+    margin: 5px;
+}
+
+.create-comment-content {
+    padding: 10px;
+    height: 75px;
+    border: solid 1px;
+    border-radius: 3px;
 }
 
 .answer-add-comment-box{
-    visibility: hidden;
+    display: none;
+    /* visibility: hidden; */
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .buttons-comment-action{
+    min-width: 300px;
     width: fit-content;
     height: fit-content;
     grid-row-start: 2;
@@ -183,29 +235,26 @@
 }
 
 .comment-list-item{
-    max-width: 350px;
+    max-width: 550px;
     max-height: 200px;
-    min-width: 300px;
+    min-width: 500px;
     /* background-color: rgb(255, 255, 255); */
     padding: 10px;
     border: rgb(10,149,255) solid 1px;
     border-radius: 5px;
+    margin: 5px;
+    overflow-wrap: break-word;
 }
 
 .commentListContainer {
-    width: 700px;
-    grid-column-start: 2;
-    grid-column-start: 3;
-    grid-row-start: 3;
-    grid-row-end: 3;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
     margin-top: 20px;
 }
 
 .comment-content{
     margin-bottom: 30px;
-
 }
 
 .buttonsContainer{
