--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
             div(id=`question-container-${question.id}`).questionContainer
                 a(href=`/questions/${question.id}`).question-title= question.title
                 div.content-container
-                  span(id=`content-${question.id}`).question-content= question.content
+                  div(id=`content-${question.id}`).question-content= question.content
                 if locals.user
                   if locals.user.id === question.user_id
                     div.buttonsContainer
