--- a/views/question.pug
+++ b/views/question.pug
@@ -64,27 +64,28 @@ block content
                                 input(type='hidden' name='answerId' value= answer.id)
                                 button(name='downvotebtn' type="submit" class='vote-down-btn-style')
                                      i(class='fa fa-caret-down')
-                    if locals.user
-                        .answer-add-comment-box
-                            form(action=`/questions/${question.id}/comments` method="post")
-                                input(type="hidden" name="_csrf" value=csrfToken)
-                                input(type="hidden" name="answerId" value= answer.id)
-                                label(for="new-comment-content") New Comment
-                                textarea(type="textarea" name="newCommentContent").create-comment-content
-                                button(id="postComment" type="submit") Post Comment
-                    div(id= `comment-List-container`).commentListContainer
-                        if answer.Comments
-                            each comment in answer.Comments
-                                div(id=`comment-container-${comment.id}`).comment-list-item
-                                    span(id=`comment-content-${comment.id}`).comment-content= comment.content
-                                    if locals.user
-                                        if locals.user.id === comment.user_id
-                                            div.buttonsContainer
+                    .posting-comment-andcomments-container
+                        if locals.user
+                            .answer-add-comment-box
+                                form(action=`/questions/${question.id}/comments` method="post" class="new-comment-post-box")
+                                    input(type="hidden" name="_csrf" value=csrfToken)
+                                    input(type="hidden" name="answerId" value= answer.id)
+                                    label(for="new-comment-content") New Comment
+                                    textarea(type="textarea" name="newCommentContent").create-comment-content
+                                    button(id="postComment" type="submit") Post Comment
+                        div(id= `comment-List-container`).commentListContainer
+                            if answer.Comments
+                                each comment in answer.Comments
+                                    div(id=`comment-container-${comment.id}`).comment-list-item
+                                        div(id=`comment-content-${comment.id}`).comment-content= comment.content
+                                        if locals.user
+                                            if locals.user.id === comment.user_id
+                                                div.buttonsContainer
 
-                                                button(id=`${comment.id}-delete-comment` data-inline='true').delete-btn.delete-btn-comment Delete Comment
-                                                button(id=`${comment.id}-edit-comment` data-inline='true').edit-btn.edit-btn-comment Edit Comment
-                                                button(id=`cancel-edit-comment-${comment.id}` hidden=true).cancel-btn-comment Cancel Edit
-                                                button(id=`confirm-edit-comment-${comment.id}` hidden=true).confirm-btn-comment Confirm Edit
+                                                    button(id=`${comment.id}-delete-comment` data-inline='true').delete-btn.delete-btn-comment Delete Comment
+                                                    button(id=`${comment.id}-edit-comment` data-inline='true').edit-btn.edit-btn-comment Edit Comment
+                                                    button(id=`cancel-edit-comment-${comment.id}` hidden=true).cancel-btn-comment Cancel Edit
+                                                    button(id=`confirm-edit-comment-${comment.id}` hidden=true).confirm-btn-comment Confirm Edit
     if locals.user
         .questions-add-answer-box
             h2.question-answer-header Have the <span>answer</span>?
