--- a/views/utils.pug
+++ b/views/utils.pug
@@ -1,6 +1,6 @@
 mixin validationErrorSummary(errors)
     if errors
-        div
+        div.errorContainer
             p Error(s):
             ul.error-list
                 each error in errors
