--- a/public/stylesheets/questions.css
+++ b/public/stylesheets/questions.css
@@ -153,6 +153,7 @@
 
 .answer-content {
     height: fit-content;
+    max-width: 900px;
     min-height: 100px;
     background-color: white;
     padding: 5px;
@@ -162,7 +163,7 @@
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 1;
-    min-width: 700px;
+    min-width: 900px;
     margin-bottom: 10px;
     margin-top: 10px;
     overflow-wrap: break-word;
@@ -212,13 +213,15 @@
 }
 
 .buttons-comment-action{
-    min-width: 300px;
+    min-width: 100px;
     width: fit-content;
     height: fit-content;
     grid-row-start: 2;
     grid-row-end: 2;
     grid-column-start: 2;
     grid-column-end: 3;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .post-comment-btn-parent {
@@ -228,6 +231,7 @@
     grid-column-end: 3;
     display: flex;
     justify-content: flex-end;
+    width: 600px;
 }
 
 .show-comment-form {
@@ -235,7 +239,7 @@
 }
 
 .comment-list-item{
-    max-width: 550px;
+    max-width: 500px;
     max-height: 200px;
     min-width: 500px;
     /* background-color: rgb(255, 255, 255); */
@@ -298,6 +302,20 @@
     justify-content: center;
 }
 
+.non-login-votes {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 5px;
+    background-color: wheat;
+    padding: 0 5px;
+    height: 100px;
+    margin-top: 10px;
+    border-radius: 3px;
+}
+
 .errorContainer{
     display: flex;
     justify-content: center;
@@ -307,5 +325,4 @@
 
 .error-list{
     list-style: none;
-
 }
