--- a/views/questionform.pug
+++ b/views/questionform.pug
@@ -7,7 +7,7 @@ block content
         +validationErrorSummary(errors)
     .q-page-size-adjust
      div.question-form-page-content
-        h2.question-header Ask a public question
+        h2.question-header Ask a public Question
         div(id="questionFormContainer").form-style-2
             form(action="/questions" method="post").questionForm
                     input(type="hidden" name="_csrf" value=csrfToken)
@@ -32,7 +32,7 @@ block content
                             li Describe expected and actual results
                             li Include any error messages
                     li
-                        button(class='collapsible' type='button')  Describe what you'he tried
+                        button(class='collapsible' type='button')  Describe what you've tried
                             i(class='fa fa-angle-double-down' id='dropdown')
                         p Show what you’ve tried and tell us what you found (on this site or elsewhere) and why it didn’t meet your needs. You can get better answers when you provide research.
                     li
